# fast-api-gunicorn-server

./: .buildargs.sh  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: init.py  main.py
src/configs/: gunicorn_config.py  logging_gunicorn_config.conf  server_config.py
src/routers/: __init__.py  common.py
src/routers/v1/: __init__.py  cars.py
src/routers/v2/: __init__.py  cars.py
src/schema/: cars.py
src/services/: engine.py
src/utils/: __init__.py  logging.py  metrics.py  typing.py
tests/: test_engine.py
