[tool.poetry]
name = "server"
version = "0.0.1"
description = "gunicorn server"
authors = ["roman.peresypkin <roman.peresypkin@pm.bet>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.95.1"
uvicorn = "^0.17.6"
uvloop = "0.17.0"
httptools = "^0.4.0"
gunicorn = "^20.1.0"
python-json-logger = "^2.0.2"
starlette-exporter = "^0.12.0"
sentry-sdk = "^1.22.2"
orjson = "^3.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
